--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
     <title>Title</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script>
-    <script src="https://d3js.org/d3.v3.min.js"></script>
-    <script src="js/d3.layout.cloud.js"></script>
-    <script src="js/gauge.js"></script>
-    <script src="js/drawCloud.js"></script>
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="js/d3-simple-gauge.js"></script>
+    <script src="js/wordcloud2.js"></script>
+    <script src="js/newCloud.js"></script>
+    <script src="js/line_small_multi.js"></script>
     <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/gauge.css">
 </head>
 <body>
 <div id="wrapper">
@@ -48,16 +50,26 @@
                 <div class="col-2">
                     Year
                 </div>
-                <div class="col-6">
+                <div id="my_dataviz" class="col-6">
                     Average Acoustic Characteristics
                 </div>
                 <div class="col-4">
-                    <div class="row">
-                        Stemmed Words
-                        <svg id="stemmed-word-cloud" width="300" height="300"></svg>
-                    </div>
-                    <div class="row">
+                        Stemmed Words<br>
+                        <div class="row">
+                            <canvas id="stemmed-word-cloud" width="300" height="300"></canvas>
+                        </div>
                         Average Sentiments
+                        <div class="row">
+                            <div class="col-4">
+                                Negative
+                            </div>
+                            <div class="col-4">
+                                Neutral
+                            </div>
+                            <div class="col-4">
+                                Positive
+                            </div>
+                        </div>
                         <div class="row">
                             <div class="col-4" id="gauge1">
                             </div>
@@ -74,41 +86,56 @@
     <!-- /#page-content-wrapper -->
     <script>
         function onDocumentReady() {
-            var powerGauge1 = gauge('#gauge1', {
-                size: 100,
-                clipWidth: 100,
-                clipHeight: 100,
-                ringWidth: 60,
-                maxValue: 10,
-                transitionMs: 1000,
+            const svg1 = d3.select('#gauge1')
+                .append('svg')
+                .attr('width', 150)
+                .attr('height', 150);
+
+            const gauge1 = new window.d3SimpleGauge.SimpleGauge({
+                barWidth: 10,
+                needleRadius: 3,
+                el: svg1.append('g'),
+                height:  150,
+                interval: [0, 200],
+                sectionsCount: 3,
+                width: 150,
             });
-            powerGauge1.render();
 
-            powerGauge1.update(5);
+            gauge1.value = 100;
 
-            var powerGauge2 = gauge('#gauge2', {
-                size: 100,
-                clipWidth: 100,
-                clipHeight: 100,
-                ringWidth: 60,
-                maxValue: 10,
-                transitionMs: 1000,
+            const svg2 = d3.select('#gauge2')
+                .append('svg')
+                .attr('width', 150)
+                .attr('height', 150);
+
+            const gauge2 = new window.d3SimpleGauge.SimpleGauge({
+                barWidth: 10,
+                needleRadius: 3,
+                el: svg2.append('g'),
+                height:  150,
+                interval: [0, 200],
+                sectionsCount: 3,
+                width: 150,
             });
-            powerGauge2.render();
 
-            powerGauge2.update(5);
+            gauge2.value = 100;
 
-            var powerGauge3 = gauge('#gauge3', {
-                size: 100,
-                clipWidth: 100,
-                clipHeight: 100,
-                ringWidth: 60,
-                maxValue: 10,
-                transitionMs: 1000,
+            const svg3 = d3.select('#gauge3')
+                .append('svg')
+                .attr('width', 150)
+                .attr('height', 150);
+
+            const gauge3 = new window.d3SimpleGauge.SimpleGauge({
+                barWidth: 10,
+                needleRadius: 3,
+                el: svg3.append('g'),
+                height:  150,
+                interval: [0, 200],
+                sectionsCount: 3,
+                width: 150,
             });
-            powerGauge3.render();
 
-            powerGauge3.update(5);
+            gauge3.value = 100;
 
         }
 
