--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     Year
                 </div>
                 <div id="my_dataviz" class="col-6">
-                    Average Acoustic Characteristics
+                    <!--Average Acoustic Characteristics-->
                 </div>
                 <div class="col-4">
                         Stemmed Words<br>
