finally got nest to work
have to remember Promises in d3 v5

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/bootstrap.min.js"></script>
     <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src=" https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
     <script src="js/d3-simple-gauge.js"></script>
     <script src="js/wordcloud2.js"></script>
     <script src="js/newCloud.js"></script>
@@ -51,6 +52,7 @@
                     Year
                 </div>
                 <div id="my_dataviz" class="col-6">
+                    <textarea id="ex1" rows="15" cols="90"></textarea>
                     <!--Average Acoustic Characteristics-->
                 </div>
                 <div class="col-4">
