Word cloud works!

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         <div class="row">
                             <canvas id="stemmed-word-cloud" width="300" height="300"></canvas>
                         </div>
-                        <script src="js/newCloud.js"></script>
+                        <!--<script src="js/newCloud.js"></script>-->
                         Average Sentiment
                         <!--<div class="row">-->
                             <!--<div class="col-4">-->
